defaults to IpAddress.Any.


TcpSocket
--------
Fixed an internal issue with receiving raw data.


UdpSocket
----------
The bind function can now accept a specific IpAddress to be bound to, and
defaults to IpAddress.Any.

Fixed an internal issue with receiving raw data.


Window
======

Event
-----
MouseWheelEvent was marked as deprecated (Use MouseWheelScrollEvent instead).


Graphics
========

Color
-----
Added the color * color and color*= color operators, which SFML calls
modulation.


GLSL
----
Added glsl.d, which has all the types related to working with GLSL functions.


PrimitiveType
------------
Added LineStrip, TriangleStrip, and TriangleFan members.

LinesStrip, TrianglesStrip, and TrianglesFan were marked as deprecated (instead,
use LineStrip, TriangleStrip, and TriangleFan respectively).

Text
----
Updated Text class to be current as of SFML 2.4.

Added properties to replace most getters/setters, which were then deprecated.

RenderWindow
------------
Added RenderWindow.capture, and then marked it as deprecated. Although this was
immediately marked as deprecated, it should still be present in the current API.
Use a Texture, its update function, and copy its contents into an Image instead.


Shader
------
Added support for geometry shaders.

Added setUniform and setUniformArray functions.

Changed opIndexAssign functions to use the setUniform and setUniformArray
functions instead of the setParameter functions where applicable.

Added opIndexAssign for new setUniform and setUniformArray where needed.

Marked all setParameter functions as deprecated. Use their setUniform variants
instead.


Texture
-------
Marked updateFromImage, updateFromPixels, updateFromWindow, and updateFromWindow
as deprecated. These have been replaced by their respective update overloads,
which are now also work with const objects if they didn't already.

Added update functions for pixels, an Image, and Window/RenderWindow without the
need to define an x and y.


Transform
--------